Migrate to Spring 3.2